<resources>
    <string name="app_name">AiGolf</string>
    <string name="title_home">首页</string>
    <string name="title_ai_record">AI拍</string>
    <string name="title_ai_compare">AI对比</string>
    <string name="title_ai_report">AI报</string>
    <string name="title_personal">个人中心</string>
    <string name="video">视频</string>
    <string name="mine">我的</string>
    <string name="one_key_login">一键登录，尽情体验AI功能</string>
    <string name="input_mobile">请输入手机号</string>
    <string name="get_phone_code">获取短信验证码</string>
    <string name="auto_regist">未注册的手机号验证通过后将自动注册</string>
    <string name="other_login">其他登录方式</string>
    <string name="iagree">我已阅读并同意</string>
    <string name="protocol">隐私政策和用户服务协议</string>
    <string name="input_code">请输入验证码</string>
    <string name="login">登录</string>
    <string name="resend">重新发送</string>
    <string name="has_send">已发送至</string>
    <string name="skip">跳过</string>
    <string name="add_avatar">添加头像</string>
    <string name="info_nickname">昵称:</string>
    <string name="info_identity">身份:</string>
    <string name="info_gender">性别:</string>
    <string name="info_gender2">性别</string>
    <string name="info_age">年龄:</string>
    <string name="info_des">简介:</string>
    <string name="info_input_age">请填写年龄</string>
    <string name="info_input_info">请填写个人简介</string>
    <string name="info_input_nickname">请填写昵称</string>
    <string name="info_cancel">取消</string>
    <string name="info_commit">提交</string>
    <string name="info_man">男</string>
    <string name="info_wuman">女</string>
    <string name="info_soccer">职业球员</string>
    <string name="info_amateur">业余球员</string>
    <string name="info_coach">教练</string>
    <string name="my_collection">我的收藏</string>
    <string name="pose_lib">姿识库</string>
    <string name="filter">筛选</string>
    <string name="compare_num">%s次比对</string>
    <string name="type">类型</string>
    <string name="action">动作</string>
    <string name="all">全部</string>
    <string name="swing_full">全挥杆</string>
    <string name="swing_half">半挥杆</string>
    <string name="swing_small">小挥杆</string>
    <string name="ball_club">球杆</string>
    <string name="wooden_pole">木杆</string>
    <string name="iron_pole">铁杆</string>
    <string name="push_rod">推杆</string>
    <string name="left_hand">左手</string>
    <string name="right_hand">右手</string>
    <string name="lever_holder">持杆手</string>
    <string name="direction">人物方向</string>
    <string name="positive">正面</string>
    <string name="side">侧面</string>
    <string name="input_project">请输入训练项目</string>
    <string name="my_follow">关注的人</string>
    <string name="follow">关注</string>
    <string name="followed">已关注</string>
    <string name="private_letter">私信</string>
    <string name="check">查看</string>
    <string name="search_name">搜索姓名</string>
    <string name="praise">获赞</string>
    <string name="gift">礼物</string>
    <string name="input_info_hint">大家好，让大家更了解你</string>
    <string name="setting">设置</string>
    <string name="feedback">用户反馈</string>
    <string name="business">商务合作</string>
    <string name="receive_gift">收到的礼物</string>
    <string name="golf_ball">高尔夫球</string>
    <string name="silver_ball">银球</string>
    <string name="golden_ball">金球</string>
    <string name="training_ground">训练场</string>
    <string name="ball_ground">球场</string>
    <string name="upload_analysis">上传/分析</string>
    <string name="my_share">我的分享</string>
    <string name="my_gift">我的礼物</string>
    <string name="info_video">视频(%s)</string>
    <string name="info_analysis">AI分析(%s)</string>
    <string name="info_compare">AI比对(%s)</string>
    <string name="info_report">AI报告(%s)</string>

    <string name="pull_to_refresh_swipe_sub_label">精彩马上呈现</string>
</resources>