<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xlong.aigolf.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_ai_record"
        android:name="com.xlong.aigolf.fragment.AiRecordFragment"
        android:label="@string/title_ai_record"
        tools:layout="@layout/fragment_ai_record" />
    <fragment
        android:id="@+id/navigation_ai_compare"
        android:name="com.xlong.aigolf.fragment.AiCompareFragment"
        android:label="@string/title_ai_compare"
        tools:layout="@layout/fragment_ai_compare" />
    <fragment
        android:id="@+id/navigation_ai_report"
        android:name="com.xlong.aigolf.fragment.AiReportFragment"
        android:label="@string/title_ai_report"
        tools:layout="@layout/fragment_ai_report" />
    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.xlong.aigolf.fragment.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />

</navigation>