<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@mipmap/bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_transprent_70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AI"
            android:textColor="@color/c_ffffff"
            android:textSize="69dp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Golf"
            android:textColor="@color/c_ffffff"
            android:textSize="48dp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/one_key_login"
        android:textColor="@color/c_ffffff"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_logo" />


    <com.xlong.libui.TDRelativeLayout
        android:id="@+id/layout_edt"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_logo"
        app:td_radius="5dp"
        app:td_solid_color="@color/c_664b4b4b">

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="12dp"
            android:layout_height="17dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_delete" />

        <EditText
            android:id="@+id/edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="20dp"
            android:layout_toRightOf="@id/iv_phone"
            android:background="@null"
            android:digits="1234567890"
            android:hint="@string/input_mobile"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/c_ffffff"
            android:textColorHint="@color/white_60"
            android:textCursorDrawable="@null"
            android:textSize="14dp" />

    </com.xlong.libui.TDRelativeLayout>


    <com.xlong.libui.TDTextView
        android:id="@+id/tv_get_code"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="37dp"
        android:layout_marginRight="35dp"
        android:gravity="center"
        android:text="@string/get_phone_code"
        android:textColor="@color/c_ffffff"
        android:textSize="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edt"
        app:td_radius="5dp"
        app:td_solid_color="@color/c_F82E54" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/auto_regist"
        android:textColor="@color/c_ffffff"
        android:textSize="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_get_code" />

    <TextView
        android:id="@+id/tv_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="@string/other_login"
        android:textColor="@color/c_ffffff"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:layout_width="95dp"
        android:layout_height="1dp"
        android:layout_marginRight="9dp"
        android:background="@color/white_50"
        app:layout_constraintBottom_toBottomOf="@id/tv_other"
        app:layout_constraintRight_toLeftOf="@id/tv_other"
        app:layout_constraintTop_toTopOf="@id/tv_other" />

    <View
        android:layout_width="95dp"
        android:layout_height="1dp"
        android:layout_marginLeft="9dp"
        android:background="@color/white_50"
        app:layout_constraintBottom_toBottomOf="@id/tv_other"
        app:layout_constraintLeft_toRightOf="@id/tv_other"
        app:layout_constraintTop_toTopOf="@id/tv_other" />


    <ImageView
        android:id="@+id/tv_weixin"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="10dp"
        android:src="@mipmap/ic_weixin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_other" />

    <LinearLayout
        android:id="@+id/layout_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <CheckBox
            android:id="@+id/chk_provision"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:button="@drawable/selector_set_rule"
            android:gravity="center"
            android:padding="5dp" />

        <TextView
            android:id="@+id/tv_protocol1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/iagree"
            android:textColor="@color/c_ffffff"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/protocol"
            android:textColor="@color/c_ffffff"
            android:textSize="12dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>